--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "build": "tsc",
     "prepublishOnly": "npm run build",
     "dev": "tsx watch src/cli.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [
     "career",
@@ -53,7 +55,9 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
+    "@vitest/coverage-v8": "^2.1.8",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^2.1.8"
   }
 }
